# PaxRL

./: .gitignore  Prober-v0.toml  README.md  Target-v0.toml  anim.py  core.py  eval.py  f.py  game.py  install.sh  main.py  ml_monitor.py  ppo_agent_9.eqx  prob_env.toml  pyproject.toml  req.txt  requirements.txt  run_tests.py  space.py  test.py  train_cfg.toml
entry/: entry.py  oldtest.py
oldtests/: oldtest.py  oldtest_mine.py  oldtest_model.py  oldtest_model_jax.py  oldtest_model_jax_open.py
pax/: __init__.py
pax/agents/: reinforce.py
pax/core/: action.py  actors.py  environment.py  paxlog.py  rax.py  script.py  script_inter.py  space.py  spaces.py  state.py
pax/environments/: __init__.py
pax/environments/classic/: target.py
pax/environments/custom/: __init__.py  prober.py  reynolds_dynamics.py
pax/environments/custom/proberv0/: __init__.py  prober.py  reynolds_dynamics.py  script_inter.py
pax/managers/: __init__.py  batch.py  import jax.py  rollout.py  trainer.py
pax/models/: __init__.py  mlp.py
pax/render/: __init__.py  render.py  render_old.py  utils.py
pax/scenarios/: __init__.py  prober.py  rax.py  script.py  script_inter.py
pax/training/: __init__.py  batch.py  import jax  models.py  rollout.py  trainer.py  trainer_1.py  utils.py
pax/utils/: bezier.py  read_toml.py
pax/wrappers/: __init__.py  logger.py  observation.py  wrapper.py
tests/: test.py  test_basic.py  test_env.toml  test_model.py  test_other.py  test_rax.py  test_target.py
